@@ -25,6 +25,7 @@
 //#define BB_FDFLUSH
 #define BB_FIND
 #define BB_FREE
+#define BB_FREERAMDISK
 #define BB_FSCK_MINIX
 #define BB_GREP
 #define BB_GUNZIP
